Alterações do segundo video

--- a/3.Bloco-Introdução-HTML-CSS/2.Primeiros-Passos-em-CSS/index.html
+++ b/3.Bloco-Introdução-HTML-CSS/2.Primeiros-Passos-em-CSS/index.html
@@ -7,12 +7,38 @@
     <style>
 
 h1 {
-    front-size: 65%;
+    font-size: 65px;
     color: orange;
+    font-family: monospace, sans-serif;
 }
 
 body {
     background-color: rgb(255, 400, 200);
+    font-size: 16px;
+}
+
+ul {
+    font-style: italic;
+    line-height: 40px;
+    text-align: center;
+    text-decoration: underline;
+}
+
+p {
+    font-weight: 600;
+    font-size: 3em;
+}
+
+#Yellow {
+    background-color: yellow;
+}
+
+#Red {
+    background-color: red;
+}
+
+#Brown {
+    background-color: brown;
 }
 
 #unorder-list {
@@ -31,10 +57,12 @@ color: white;
     <h1>Exercícios 3.2</h1>
     <p class="list-style">Qual é a sua cor favorita?</p>
     <ul class="list-style" id="unorder-list"> 
-        <li>Amarelo</li>
-        <li>Vermelho</li>
-        <li>Marrom</li>
+        <li id="Yellow">Amarelo</li>
+        <li id="Red">Vermelho</li>
+        <li id="Brown">Marrom</li>
     </ul>
 </body>
 
 </html>
+
+<!-- #csszengarden.com/-->
