--- a/3.Bloco-Introdução-HTML-CSS/3.HTML-CSS-Seletores-e-posicionamento/index3.html
+++ b/3.Bloco-Introdução-HTML-CSS/3.HTML-CSS-Seletores-e-posicionamento/index3.html
@@ -3,11 +3,21 @@
   <head>
     <meta charset="UTF-8">
     <title>Agrupando Seletores</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style3.css">
   </head>
   <body>
     <h1>Lista dos Melhores Sites que já vi</h1>
     <p>Top 3 dos melhores sites que existem na web</p>
+    <ol>
+        <li>Linkedin</li>
+        <li>Google Docs</li>
+        <li>w3schools</li>
+    </ol>
     <p>Principais motivos para eu gostar deles</p>
+    <ul>
+        <li>São muito úteis;</li>
+        <li>Faceis de navegar;</li>
+        <li>Um excelente interação com as ferramentas;</li>
+    </ul>
   </body>
 </html>
