Alterações no exercicio 3.3

--- a/3.Bloco-Introdução-HTML-CSS/3.HTML-CSS-Seletores-e-posicionamento/index4.html
+++ b/3.Bloco-Introdução-HTML-CSS/3.HTML-CSS-Seletores-e-posicionamento/index4.html
@@ -11,19 +11,19 @@
     <div>
         <h1>Paleta de Cores</h1>
         <p>Vamos criar uma paleta de cores com as divs abaixo:</p>
-        <div>
+        <div class="primeiro">
             <h3>Cor primária</h3>
         </div>
-        <div>
+        <div class="segundo">
             <h3>Cor Secundária</h3>
         </div>
-        <div>
+        <div class="terceiro">
             <h3>Cor Complementar</h3>
         </div>
-        <div>
+        <div class="quarto">
             <h3>Cor Escura</h3>
         </div>
-        <div>
+        <div class="quinto">
             <h3>Cor Clara</h3>
         </div>
     </div>
