Adicionado css externo e subtitulo

--- a/3.Bloco-Introdução-HTML-CSS/4.HTML-Semantico/index2.html
+++ b/3.Bloco-Introdução-HTML-CSS/4.HTML-Semantico/index2.html
@@ -4,10 +4,22 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="style2.css">
+    <title>Exercicios</title>
 </head>
 
 <body>
-    <!--insira os elementos aqui-->
+    <header>
+        <h1>Soco a 80km/h: Conheça o Stomatopoda.</h1>
+    </header>
+    <nav>
+        <link rel="stylesheet" href="https://www.nationalgeographic.com/science/article/natures-most-amazing-eyes-just-got-a-bit-weirder">Pagina Inicial
+        <link rel="stylesheet" href="https://theoatmeal.com/comics/mantis_shrimp">Sobre
+        <link rel="stylesheet" href="https://www.google.com/webhp?hl=pt-BR&sa=X&ved=0ahUKEwi0zNWmsMz5AhVfBrkGHR0yDyMQPAgI">Contato
+    </nav>
+    <article>
+        <h2>Fatos sobre o Stomatopoda</h2>
+    </article>
 </body>
 
 </html>
