Correção na lista dos links nav

--- a/3.Bloco-Introdução-HTML-CSS/4.HTML-Semantico/index2.html
+++ b/3.Bloco-Introdução-HTML-CSS/4.HTML-Semantico/index2.html
@@ -13,13 +13,22 @@
         <h1>Soco a 80km/h: Conheça o Stomatopoda.</h1>
     </header>
     <nav>
-        <link rel="stylesheet" href="https://www.nationalgeographic.com/science/article/natures-most-amazing-eyes-just-got-a-bit-weirder">Pagina Inicial
-        <link rel="stylesheet" href="https://theoatmeal.com/comics/mantis_shrimp">Sobre
-        <link rel="stylesheet" href="https://www.google.com/webhp?hl=pt-BR&sa=X&ved=0ahUKEwi0zNWmsMz5AhVfBrkGHR0yDyMQPAgI">Contato
+        <ul>
+            <li>
+                <link rel="stylesheet" href="">Pagina Inicial
+            </li>
+            <li>
+                <link rel="stylesheet" href="">Sobre
+            </li>
+            <li>
+                <link rel="stylesheet" href="">Contato
+            </li>
+        </ul>
     </nav>
     <article>
         <h2>Fatos sobre o Stomatopoda</h2>
     </article>
+    <p></p>
 </body>
 
 </html>
