--- a/3.Bloco-Introdução-HTML-CSS/4.HTML-Semantico/index2.html
+++ b/3.Bloco-Introdução-HTML-CSS/4.HTML-Semantico/index2.html
@@ -15,20 +15,71 @@
     <nav>
         <ul>
             <li>
-                <link rel="stylesheet" href="">Pagina Inicial
+                <a href="" target="_blank">Pagina Inicial</a>
             </li>
             <li>
-                <link rel="stylesheet" href="">Sobre
+                <a href="" target="_blank">Sobre</a>
             </li>
             <li>
-                <link rel="stylesheet" href="">Contato
+                <a href="" target="_blank">Contato</a>
             </li>
         </ul>
     </nav>
     <article>
         <h2>Fatos sobre o Stomatopoda</h2>
+
+        <section>
+            <h3>General Information</h3>
+            <p>Eyes are testaments to evolution’s creativity. They all do the same basic things—detect light, and
+                convert it
+                into electrical signals—but in such a wondrous variety of ways. There are single and compound eyes,
+                bifocal
+                lenses and rocky ones, mirrors and optic fibres.Just for information, it's scientific name
+                <em>Odontodactylus scyllarus</em>. And there are eyes that are so alien, so constantly
+                surprising, that after decades of research, scientists have only just about figured out how they work,
+                let
+                alone why they evolved that way. To find them, you need to go for a swim.</p>
+        </section>
+        <section>
+            <h3></h3>
+            <p>This is the eye of a mantis shrimp—an marine animal that’s neither a mantis nor a shrimp, but a close
+                relative of crabs and lobsters. It’s a compound eye, made of thousands of small units that each detects
+                light independently. Those in the midband—the central stripe you can see in the photo—are special.
+                They’re
+                the ones that let the animal see colour.</p>
+        </section>
+        <div class="table">
+            <h3>Classificação Científica</h3>
+            <table>
+<tr>
+    <td>Reino:</td>
+    <td>Animalia</td>
+</tr>
+<tr>
+    <td>Filo:</td>
+    <td>Arthropoda</td>
+</tr>
+<tr>
+    <td>Subfilo:</td>
+    <td>Crustacea</td>
+</tr>
+<tr>
+    <td>Classe:</td>
+    <td>Malacostraca</td>
+</tr>
+<tr>
+    <td>Subclasse:</td>
+    <td>Hoplocarida</td>
+</tr>
+<tr>
+    <td>Ordem:</td>
+    <td>Stomatopoda
+        Latreille, 1817
+        </td>
+</tr>
+            </table>
+        </div>
     </article>
-    <p></p>
 </body>
 
 </html>
