--- a/3.Bloco-Introdução-HTML-CSS/4.HTML-Semantico/index2.html
+++ b/3.Bloco-Introdução-HTML-CSS/4.HTML-Semantico/index2.html
@@ -38,48 +38,71 @@
                 <em>Odontodactylus scyllarus</em>. And there are eyes that are so alien, so constantly
                 surprising, that after decades of research, scientists have only just about figured out how they work,
                 let
-                alone why they evolved that way. To find them, you need to go for a swim.</p>
+                alone why they evolved that way. To find them, you need to go for a swim.
+            </p>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/07/Peacock_shrimp_at_manta_reef_dsc04367.jpg/800px-Peacock_shrimp_at_manta_reef_dsc04367.jpg" alt="Peixe-esquisito">
         </section>
         <section>
-            <h3></h3>
+            <h3>Saying nothing</h3>
             <p>This is the eye of a mantis shrimp—an marine animal that’s neither a mantis nor a shrimp, but a close
-                relative of crabs and lobsters. It’s a compound eye, made of thousands of small units that each detects
-                light independently. Those in the midband—the central stripe you can see in the photo—are special.
+                relative of crabs and lobsters.<strong> It’s a compound eye, made of thousands of small units that each detects
+                light independently.</strong> Those in the midband—the central stripe you can see in the photo—are special.
                 They’re
                 the ones that let the animal see colour.</p>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/b/b5/Odontodactylus_scyllarus1.jpg" alt="Peixe-estranho">
         </section>
         <div class="table">
             <h3>Classificação Científica</h3>
             <table>
-<tr>
-    <td>Reino:</td>
-    <td>Animalia</td>
-</tr>
-<tr>
-    <td>Filo:</td>
-    <td>Arthropoda</td>
-</tr>
-<tr>
-    <td>Subfilo:</td>
-    <td>Crustacea</td>
-</tr>
-<tr>
-    <td>Classe:</td>
-    <td>Malacostraca</td>
-</tr>
-<tr>
-    <td>Subclasse:</td>
-    <td>Hoplocarida</td>
-</tr>
-<tr>
-    <td>Ordem:</td>
-    <td>Stomatopoda
-        Latreille, 1817
-        </td>
-</tr>
+                <tr>
+                    <td><a href="https://pt.wikipedia.org/wiki/Reino_(biologia)">Reino:</a></td>
+                    <td><a href="https://pt.wikipedia.org/wiki/Animalia">Animalia</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://pt.wikipedia.org/wiki/Filo">Filo:</a></td>
+                    <td><a href="https://pt.wikipedia.org/wiki/Artr%C3%B3pode">Arthropoda</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://pt.wikipedia.org/wiki/Filo">Subfilo:</a></td>
+                    <td><a href="https://pt.wikipedia.org/wiki/Crust%C3%A1ceo"> Crustacea</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://pt.wikipedia.org/wiki/Classe_(biologia)"> Classe:</a></td>
+                    <td><a href="https://pt.wikipedia.org/wiki/Malac%C3%B3stracos">Malacostraca</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://pt.wikipedia.org/wiki/Classe_(biologia)">Subclasse:</a></td>
+                    <td><a href="https://pt.wikipedia.org/wiki/Hoplocarida">Hoplocarida</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://pt.wikipedia.org/wiki/Ordem_(biologia)">Ordem:</a></td>
+                    <td><a href="https://pt.wikipedia.org/wiki/Stomatopoda">Stomatopoda, Latreille, 1817</a></td>
+                </tr>
             </table>
         </div>
+        <section>
+            <h3>Talking about something</h3>
+            <p>Like us, mantis shrimps see colour with the help of light-sensitive proteins called opsins. These form
+                the basis of visual pigments that react to different wavelengths of light, allowing us to see different
+                colours. If a mantis shrimp has six UV receptors, it should have at least six opsins that are sensitive
+                to different flavours of UV.</p>
+                <img src="https://naturezaterraquea.files.wordpress.com/2019/04/794px-odontodactylusscyllarus.jpg" alt="Peixe-zuado">
+        </section>
     </article>
+    <aside>
+        <ul>Fontes</ul>
+        <li><a href="https://repositorio.ufpb.br/jspui/handle/tede/4113?locale=pt_BR">Repositorio</a></li>
+        <li><a href="https://www.biodiversity4all.org/taxa/49796-Stomatopoda">Biodiversity4all</a></li>
+        <li><a href="https://www.scielo.br/j/bipoce/a/5CJXKbwvBmXZs9BK4C36mRp/?lang=pt">Scielo</a></li>
+        <h4>Video class:</h4>
+        <video width="320" height="240" controls>
+<source src="https://www.youtube.com/watch?v=E0Li1k5hGBE" type="link">
+</video>
+    </aside>
+
+    <footer>
+       <p>Conteúdo compilado por Thiago Lira, 2022.</p>
+    </footer>
 </body>
 
 </html>
