--- a/3.Bloco-Introdução-HTML-CSS/4.HTML-Semantico/index.html
+++ b/3.Bloco-Introdução-HTML-CSS/4.HTML-Semantico/index.html
@@ -25,7 +25,7 @@
             <li>| R$ 1000,00 por integrante da equipe |</li>
             <li>| Bootcamp de 2 meses com possibilidade de contratação |</li>
         </ul>
-        <h3>Premiação Segundo Lugar:</h3>
+        <h3 class="">Premiação Segundo Lugar:</h3>
         <ul>
             <li>| R$ 600,00 por integrante da equipe |</li>
             <li>| Participação no processo seletivo para o Bootcamp |</li>
