--- a/6.HTML-e-CSS-Forms/1.HTML-/indexConteudo.html
+++ b/6.HTML-e-CSS-Forms/1.HTML-/indexConteudo.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
@@ -58,4 +58,4 @@
     </form>
 </body>
 
-</html> -->
+</html>
